# Agentor

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Dockerfile  README.md  REPORT_ARGENTOR_2026.md  SECURITY.md  agentor.toml  argentor.toml  docker-compose.production.yml  docker-compose.xcapitsff.yml  docker-compose.yml  release.yml
benchmarks/: Cargo.toml  README.md
benchmarks/dx/argentor/: hello_world.rs  multi_turn.rs  with_tool.rs
benchmarks/dx/claude_agent_sdk/: hello_world.py  multi_turn.py  with_tool.py
benchmarks/dx/crewai/: hello_world.py  multi_turn.py  with_tool.py
benchmarks/dx/langchain/: hello_world.py  multi_turn.py  with_tool.py
benchmarks/dx/pydantic_ai/: hello_world.py  multi_turn.py  with_tool.py
benchmarks/results/: cost_20260415_231531.json  cost_20260415_231614.json  cost_20260415_231625.json  cost_20260415_231633.json  long_horizon_20260416_000251.json  run_20260414_023909.json  run_20260414_025703.json  run_20260414_224205.json  run_20260414_230101.json  run_20260415_231815.json  security_20260415_231307.json  security_20260415_231405.json  security_20260415_231822.json
benchmarks/src/: cost_sim.rs  lib.rs  main.rs  report.rs  task.rs
benchmarks/src/datasets/: mod.rs
benchmarks/src/metrics/: block_rate.rs  cost.rs  dx.rs  long_horizon.rs  mod.rs  quality.rs  stats.rs
benchmarks/src/runners/: argentor.rs  external.rs  mock.rs  mod.rs
benchmarks/tasks/adv_ctx_01_poisoned_rag_doc/: task.yaml
benchmarks/tasks/adv_ctx_02_poisoned_file_summary/: task.yaml
benchmarks/tasks/adv_ctx_03_hidden_instruction_in_context/: task.yaml
benchmarks/tasks/adv_ctx_04_base64_in_context/: task.yaml
benchmarks/tasks/adv_ctx_05_ssn_in_context/: task.yaml
benchmarks/tasks/adv_gcg_01_base64_suffixed/: task.yaml
benchmarks/tasks/adv_gcg_02_homoglyph_cyrillic/: task.yaml
benchmarks/tasks/adv_gcg_03_zero_width_chars/: task.yaml
benchmarks/tasks/adv_gcg_04_leetspeak_injection/: task.yaml
benchmarks/tasks/adv_gcg_05_unicode_normalization/: task.yaml
benchmarks/tasks/adv_inject_01_rogue_string/: task.yaml
benchmarks/tasks/adv_inject_02_goal_hijack_json/: task.yaml
benchmarks/tasks/adv_inject_03_role_reversal_xml/: task.yaml
benchmarks/tasks/adv_inject_04_instruction_smuggle_markdown/: task.yaml
benchmarks/tasks/adv_inject_05_escape_context/: task.yaml
benchmarks/tasks/adv_tool_01_path_traversal/: task.yaml
benchmarks/tasks/adv_tool_02_wrong_tool_email/: task.yaml
benchmarks/tasks/adv_tool_03_phantom_tool/: task.yaml
benchmarks/tasks/adv_tool_04_malicious_args_passthrough/: task.yaml
benchmarks/tasks/adv_tool_05_tool_chain_confusion/: task.yaml
benchmarks/tasks/cost_mt_01_5turn_support/: task.yaml
benchmarks/tasks/cost_mt_02_10turn_coding/: task.yaml
benchmarks/tasks/cost_mt_03_20turn_research/: task.yaml
benchmarks/tasks/cost_mt_04_50turn_longrun/: task.yaml
benchmarks/tasks/cost_rag_01_1kb/: task.yaml
benchmarks/tasks/cost_rag_02_10kb/: task.yaml
benchmarks/tasks/cost_rag_03_50kb/: task.yaml
benchmarks/tasks/cost_tool_01_5tools/: task.yaml
benchmarks/tasks/cost_tool_02_20tools/: task.yaml
benchmarks/tasks/cost_tool_03_50tools/: task.yaml
benchmarks/tasks/lh_repair_01_null_deref/: task.yaml
benchmarks/tasks/lh_repair_02_off_by_one/: task.yaml
benchmarks/tasks/lh_repair_03_race_condition/: task.yaml
benchmarks/tasks/lh_repair_04_type_mismatch/: task.yaml
benchmarks/tasks/lh_repair_05_missing_error_handling/: task.yaml
benchmarks/tasks/lh_research_01_security_cve/: task.yaml
benchmarks/tasks/lh_research_02_library_comparison/: task.yaml
benchmarks/tasks/lh_research_03_performance_profiling/: task.yaml
benchmarks/tasks/lh_research_04_api_integration/: task.yaml
benchmarks/tasks/lh_research_05_architecture_review/: task.yaml
benchmarks/tasks/lh_state_01_user_preferences/: task.yaml
benchmarks/tasks/lh_state_02_project_context/: task.yaml
benchmarks/tasks/lh_state_03_incremental_data/: task.yaml
benchmarks/tasks/lh_state_04_cross_domain_facts/: task.yaml
benchmarks/tasks/lh_state_05_constraint_tracking/: task.yaml
benchmarks/tasks/sec_cmd_01_rm_rf/: task.yaml
benchmarks/tasks/sec_cmd_02_fork_bomb/: task.yaml
benchmarks/tasks/sec_cmd_03_reverse_shell/: task.yaml
benchmarks/tasks/sec_cmd_04_curl_pipe_bash/: task.yaml
benchmarks/tasks/sec_cmd_05_legitimate/: task.yaml
benchmarks/tasks/sec_inj_01_ignore_instructions/: task.yaml
benchmarks/tasks/sec_inj_02_role_jailbreak/: task.yaml
benchmarks/tasks/sec_inj_03_system_prompt_leak/: task.yaml
benchmarks/tasks/sec_inj_04_base64_smuggle/: task.yaml
benchmarks/tasks/sec_inj_05_legitimate/: task.yaml
benchmarks/tasks/sec_pii_01_credit_card/: task.yaml
benchmarks/tasks/sec_pii_02_ssn/: task.yaml
benchmarks/tasks/sec_pii_03_email_phone/: task.yaml
benchmarks/tasks/sec_pii_04_medical/: task.yaml
crates/agentor-agent/: Cargo.toml
crates/agentor-builtins/: Cargo.toml
crates/agentor-channels/: Cargo.toml
crates/agentor-cli/: Cargo.toml
crates/agentor-compliance/: Cargo.toml
crates/agentor-gateway/: Cargo.toml
crates/agentor-mcp/: Cargo.toml
crates/agentor-memory/: Cargo.toml
crates/agentor-orchestrator/: Cargo.toml
crates/agentor-security/: Cargo.toml
crates/agentor-session/: Cargo.toml
crates/agentor-skills/: Cargo.toml
crates/argentor-a2a/: Cargo.toml
crates/argentor-agent/: Cargo.toml
crates/argentor-builtins/: Cargo.toml
crates/argentor-cli/: Cargo.toml
crates/argentor-cloud/: Cargo.toml  README.md
crates/argentor-compliance/: Cargo.toml
crates/argentor-core/: Cargo.toml
crates/argentor-gateway/: Cargo.toml  dashboard.html  playground.html  pricing.html
crates/argentor-mcp/: Cargo.toml
crates/argentor-memory/: Cargo.toml
crates/argentor-orchestrator/: Cargo.toml
crates/argentor-python/: Cargo.toml  README.md  pyproject.toml
crates/argentor-security/: Cargo.toml
crates/argentor-session/: Cargo.toml
crates/argentor-skills/: Cargo.toml
(+613 files in other folders)
