[workspace]
resolver = "2"
members = [
    "crates/agentor-core",
    "crates/agentor-security",
    "crates/agentor-session",
    "crates/agentor-skills",
    "crates/agentor-agent",
    "crates/agentor-channels",
    "crates/agentor-gateway",
    "crates/agentor-cli",
    "crates/agentor-builtins",
    "crates/agentor-memory",
    "crates/agentor-mcp",
    "crates/agentor-orchestrator",
    "crates/agentor-compliance",
]
exclude = [
    "skills/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/fboiero/Agentor"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
fantoccini = "0.21"

# WASM
wasmtime = "28"
wasmtime-wasi = "28"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI & Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
notify = { version = "7", features = ["macos_fsevent"] }
bollard = "0.17"

# Internal crates
agentor-core = { path = "crates/agentor-core" }
agentor-security = { path = "crates/agentor-security" }
agentor-session = { path = "crates/agentor-session" }
agentor-skills = { path = "crates/agentor-skills" }
agentor-agent = { path = "crates/agentor-agent" }
agentor-channels = { path = "crates/agentor-channels" }
agentor-gateway = { path = "crates/agentor-gateway" }
agentor-builtins = { path = "crates/agentor-builtins" }
agentor-memory = { path = "crates/agentor-memory" }
agentor-mcp = { path = "crates/agentor-mcp" }
agentor-orchestrator = { path = "crates/agentor-orchestrator" }
agentor-compliance = { path = "crates/agentor-compliance" }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
redundant_closure_for_method_calls = "warn"

[workspace.lints.rust]
missing_docs = "warn"
