[workspace]
resolver = "2"
members = [
    "crates/argentor-core",
    "crates/argentor-security",
    "crates/argentor-session",
    "crates/argentor-skills",
    "crates/argentor-agent",
    "crates/argentor-channels",
    "crates/argentor-gateway",
    "crates/argentor-cli",
    "crates/argentor-builtins",
    "crates/argentor-memory",
    "crates/argentor-mcp",
    "crates/argentor-orchestrator",
    "crates/argentor-compliance",
]
exclude = [
    "skills/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/fboiero/Argentor"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
fantoccini = "0.21"

# WASM
wasmtime = "28"
wasmtime-wasi = "28"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI & Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
notify = { version = "7", features = ["macos_fsevent"] }
bollard = "0.17"

# Testing
wiremock = "0.6"

# Internal crates
argentor-core = { path = "crates/argentor-core" }
argentor-security = { path = "crates/argentor-security" }
argentor-session = { path = "crates/argentor-session" }
argentor-skills = { path = "crates/argentor-skills" }
argentor-agent = { path = "crates/argentor-agent" }
argentor-channels = { path = "crates/argentor-channels" }
argentor-gateway = { path = "crates/argentor-gateway" }
argentor-builtins = { path = "crates/argentor-builtins" }
argentor-memory = { path = "crates/argentor-memory" }
argentor-mcp = { path = "crates/argentor-mcp" }
argentor-orchestrator = { path = "crates/argentor-orchestrator" }
argentor-compliance = { path = "crates/argentor-compliance" }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
redundant_closure_for_method_calls = "warn"

[workspace.lints.rust]
missing_docs = "warn"
