[workspace]
resolver = "2"
members = [
    "crates/argentor-core",
    "crates/argentor-security",
    "crates/argentor-session",
    "crates/argentor-skills",
    "crates/argentor-agent",
    "crates/argentor-channels",
    "crates/argentor-gateway",
    "crates/argentor-cli",
    "crates/argentor-builtins",
    "crates/argentor-memory",
    "crates/argentor-mcp",
    "crates/argentor-orchestrator",
    "crates/argentor-compliance",
    "crates/argentor-a2a",
    "crates/argentor-tee",
    "crates/argentor-cloud",
    "experiments/comparison",
    "benchmarks",
]
exclude = [
    "skills/*",
    "crates/argentor-python",  # PyO3 cdylib — build with maturin, not cargo test --workspace
]

[workspace.package]
version = "1.1.1"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
repository = "https://github.com/fboiero/Argentor"
authors = ["Federico Boiero <fboiero@xcapit.com>"]
homepage = "https://github.com/fboiero/Argentor"
readme = "README.md"
keywords = ["ai", "agent", "wasm", "mcp", "orchestration"]
categories = ["web-programming", "asynchronous", "network-programming"]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
fantoccini = "0.21"

# WASM
wasmtime = "28"
wasmtime-wasi = "28"

# Text processing
regex = "1"

# Crypto & Encoding
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI & Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
notify = { version = "7", features = ["macos_fsevent"] }
bollard = "0.17"
git2 = "0.19"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Testing
wiremock = "0.6"

# Internal crates
argentor-core = { path = "crates/argentor-core", version = "1.1.0" }
argentor-security = { path = "crates/argentor-security", version = "1.1.0" }
argentor-session = { path = "crates/argentor-session", version = "1.1.0" }
argentor-skills = { path = "crates/argentor-skills", version = "1.1.0" }
argentor-agent = { path = "crates/argentor-agent", version = "1.1.0" }
argentor-channels = { path = "crates/argentor-channels", version = "1.1.0" }
argentor-gateway = { path = "crates/argentor-gateway", version = "1.1.0" }
argentor-builtins = { path = "crates/argentor-builtins", version = "1.1.0" }
argentor-memory = { path = "crates/argentor-memory", version = "1.1.0" }
argentor-mcp = { path = "crates/argentor-mcp", version = "1.1.0" }
argentor-orchestrator = { path = "crates/argentor-orchestrator", version = "1.1.0" }
argentor-compliance = { path = "crates/argentor-compliance", version = "1.1.0" }
argentor-a2a = { path = "crates/argentor-a2a", version = "1.1.0" }
futures-util = "0.3"
tokio-stream = "0.1"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
redundant_closure_for_method_calls = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
