[package]
name = "argentor-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false
description = "Benchmark harness for Argentor: task-based, security, cost, DX, adversarial, long-horizon"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
# Argentor internals (for native runner)
argentor-core = { path = "../crates/argentor-core" }
argentor-security = { path = "../crates/argentor-security" }
argentor-session = { path = "../crates/argentor-session" }
argentor-skills = { path = "../crates/argentor-skills" }
argentor-agent = { path = "../crates/argentor-agent" }
argentor-builtins = { path = "../crates/argentor-builtins" }

# Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Stats
statrs = "0.17"

# Reporting
tabled = "0.20"
