[package]
name = "agentor-agent"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agentor-core.workspace = true
agentor-security.workspace = true
agentor-session.workspace = true
agentor-skills.workspace = true
agentor-mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures-util = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
agentor-builtins.workspace = true
toml.workspace = true
uuid.workspace = true
