[package]
name = "agentor-builtins"
version.workspace = true
edition.workspace = true

[dependencies]
agentor-core.workspace = true
agentor-skills.workspace = true
agentor-security.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
