[package]
name = "agentor-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentor"
path = "src/main.rs"

[dependencies]
agentor-core.workspace = true
agentor-security.workspace = true
agentor-session.workspace = true
agentor-skills.workspace = true
agentor-agent.workspace = true
agentor-channels.workspace = true
agentor-gateway.workspace = true
agentor-builtins.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
toml.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower.workspace = true
