[package]
name = "agentor-orchestrator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agentor-core.workspace = true
agentor-agent.workspace = true
agentor-security.workspace = true
agentor-session.workspace = true
agentor-skills.workspace = true
agentor-mcp.workspace = true
agentor-compliance.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
cron = { workspace = true }

[dev-dependencies]
tempfile = "3"
agentor-builtins.workspace = true
