[package]
name = "agentor-security"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agentor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
