[package]
name = "agentor-session"
version.workspace = true
edition.workspace = true

[dependencies]
agentor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
