[package]
name = "agentor-skills"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agentor-core.workspace = true
agentor-security.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_yaml_ng = "0.10"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "skills_benchmarks"
harness = false
