[package]
name = "argentor-a2a"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
argentor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["client"]
client = ["dep:reqwest"]

[dev-dependencies]
tower = { workspace = true }
