[package]
name = "argentor-agent"
version.workspace = true
edition.workspace = true
description = "Agentic loop, LLM provider backends, guardrails, and ReAct engine for Argentor"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
argentor-core.workspace = true
argentor-security.workspace = true
argentor-session.workspace = true
argentor-skills.workspace = true
argentor-mcp.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures-util = "0.3"
tokio-stream = "0.1"
toml.workspace = true
regex.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
argentor-builtins.workspace = true
toml.workspace = true
uuid.workspace = true
wiremock.workspace = true
