[package]
name = "argentor-builtins"
version.workspace = true
edition.workspace = true
description = "50+ built-in skills (web search, crypto, file ops, security, data processing) for Argentor"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
argentor-core.workspace = true
argentor-skills.workspace = true
argentor-security.workspace = true
argentor-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
hex.workspace = true
fantoccini = { version = "0.21", optional = true }
bollard = { version = "0.17", optional = true }
git2.workspace = true

[features]
default = []
browser = ["fantoccini"]
docker = ["bollard"]

[dev-dependencies]
tempfile = "3"
wiremock.workspace = true
