[package]
name = "argentor-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "argentor"
path = "src/main.rs"

[dependencies]
argentor-core.workspace = true
argentor-security.workspace = true
argentor-session.workspace = true
argentor-skills.workspace = true
argentor-agent.workspace = true
argentor-channels.workspace = true
argentor-gateway.workspace = true
argentor-builtins.workspace = true
argentor-mcp.workspace = true
argentor-memory.workspace = true
argentor-compliance.workspace = true
argentor-orchestrator.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
toml.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
dotenvy = "0.15"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower.workspace = true
uuid.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"

[[example]]
name = "demo_team"
path = "examples/demo_team.rs"
