[package]
name = "argentor-compliance"
version.workspace = true
edition.workspace = true
description = "GDPR, ISO 27001, ISO 42001, and DPGA compliance modules for Argentor"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
argentor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
