[package]
name = "argentor-mcp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
argentor-core.workspace = true
argentor-skills.workspace = true
argentor-security.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
argentor-core.workspace = true
argentor-skills.workspace = true
argentor-security.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
