[package]
name = "argentor-memory"
version.workspace = true
edition.workspace = true
description = "Vector store, embeddings, and RAG pipeline for Argentor AI agents"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
http-embeddings = ["reqwest"]

[dependencies]
argentor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
regex.workspace = true
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
