[package]
name = "argentor-security"
version.workspace = true
edition.workspace = true
description = "Capability-based permissions, RBAC, audit logging, and encryption for Argentor"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
argentor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio-rustls = "0.26"
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
percent-encoding = "2.3"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "security_benchmarks"
harness = false
