[package]
name = "argentor-session"
version.workspace = true
edition.workspace = true
description = "Session management and message history storage for Argentor AI agents"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
sqlite = ["rusqlite"]

[dependencies]
argentor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
