[package]
name = "argentor-skills"
version.workspace = true
edition.workspace = true
description = "Skill registry, WASM plugin runtime, and marketplace for Argentor"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
argentor-core.workspace = true
argentor-security.workspace = true
serde.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
async-trait.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_yaml_ng = "0.10"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { workspace = true, optional = true }

[features]
default = []
registry = ["reqwest"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
http = "1.1"

[[bench]]
name = "skills_benchmarks"
harness = false
